<resources>
    <string name="app_name">Mimic</string>

    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="main_image">main_image</string>
    <string name="wifi">WIFI</string>
    <string name="button">Button</string>

    <string name="hotspot">HOTSPOT</string>
    <string name="ip">ip</string>
    <string name="enter_the_target_s_ipv4">Enter the target\'s IPv4</string>
    <string name="enter_the_ipv4">Enter the target\'s IPv4</string>
    <string name="submit">Submit</string>
    <string name="mid">MID</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="keyboard">Keyboard</string>
    <string name="mouse">Mouse</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="raven">Raven</string>
    <string name="virtual_controller">Virtual Controller</string>
    <string name="esc">esc</string>
    <string name="f1">f1</string>
    <string name="f2">f2</string>
    <string name="f3">f3</string>
    <string name="f4">f4</string>
    <string name="f5">f5</string>
    <string name="f6">f6</string>
    <string name="f7">f7</string>
    <string name="f8">f8</string>
    <string name="f9">f9</string>
    <string name="f10">f10</string>
    <string name="f11">f11</string>
    <string name="f12">f12</string>
    <string name="prt">prt</string>
    <string name="del">del</string>
    <string name="tilde">~ `</string>
    <string name="_1">! 1</string>
    <string name="win">win</string>
    <string name="product_by">Product By</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="type_code">Type CODE</string>
    <string name="scan">SCAN</string>
    <string name="or">OR</string>
    <string name="title_activity_presentation">presentationActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="_35_3">#3</string>
    <string name="_4">$ 4</string>
    <string name="_5">% 5</string>

</resources>