<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scifistillbg"
    android:clickable="false"
    tools:context=".ChoiceActivity">

    <ImageButton

        android:id="@+id/codeChoiceButton"
        android:layout_width="269dp"
        android:layout_height="83dp"
        android:background="@drawable/typecodebutton"
        android:clickable="true"
        android:contentDescription="@string/type_code"
        android:focusable="true"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scanChoiceButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/scanChoiceButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <ImageButton
        android:id="@+id/scanChoiceButton"
        android:layout_width="269dp"
        android:layout_height="83dp"

        android:background="@drawable/scanbutton"
        android:clickable="true"
        android:contentDescription="@string/scan"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeChoiceButton"
        app:layout_constraintVertical_bias="0.238" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="87dp"
        android:layout_height="37dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scanChoiceButton"
        app:layout_constraintEnd_toEndOf="@+id/codeChoiceButton"
        app:layout_constraintStart_toStartOf="@+id/scanChoiceButton"
        app:layout_constraintTop_toBottomOf="@+id/codeChoiceButton" />

</androidx.constraintlayout.widget.ConstraintLayout>