<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scifistillbg"
    android:clickable="false"
    tools:context=".CodeChoiceActivity">

    <TextView
        android:id="@+id/codeChoiceButton"
        android:layout_width="263dp"
        android:layout_height="63dp"
        android:background="@drawable/mousepad"
        android:clickable="true"
        android:focusableInTouchMode="false"
        android:fontFamily="serif-monospace"
        android:foregroundGravity="center"
        android:gravity="center"
        android:includeFontPadding="true"
        android:shadowColor="#FF0000"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#FBFBFB"
        android:textColorHighlight="#E40000"
        android:textColorHint="#EF0000"
        android:textColorLink="#FF0000"
        android:textIsSelectable="false"
        android:textSize="34sp"
        android:textStyle="normal|bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipLineBg"
        app:layout_constraintVertical_bias="0.187"
        android:focusable="true" />

    <ImageView
        android:id="@+id/ipLineBg"
        android:layout_width="378dp"
        android:layout_height="24dp"
        android:contentDescription="@string/ip"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:src="@drawable/textbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <EditText
        android:id="@+id/ipInputText"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_the_target_s_ipv4"
        android:includeFontPadding="true"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:maxLines="1"
        android:requiresFadingEdge="horizontal|vertical"
        android:shadowColor="#FF0000"
        android:shadowDy="10"
        android:singleLine="true"
        android:soundEffectsEnabled="true"
        android:text="@string/enter_the_code"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#78DCEC"
        android:textColorHint="#1565C0"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/ipLineBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/errorTv"
        android:layout_width="377dp"
        android:layout_height="43dp"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ipInputText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="RtlCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>