<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainframe2"
    android:backgroundTint="#010B42"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/codeChoiceButton"
        android:layout_width="178dp"
        android:layout_height="53dp"
        android:fontFamily="monospace"
        android:includeFontPadding="true"
        android:shadowColor="#FFFFFF"
        android:text="@string/wifi"
        android:textAllCaps="true"
        android:textColor="#546E7A"
        android:textColorHighlight="#03A9F4"
        android:textColorHint="#03A9F4"
        android:textColorLink="#03A9F4"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/submitBtn"
        app:layout_constraintEnd_toEndOf="@+id/submitBtn"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/submitBtn"
        app:layout_constraintVertical_bias="0.257"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="320dp"
        android:layout_height="88dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/group_1"
        android:hapticFeedbackEnabled="true"
        android:soundEffectsEnabled="true"
        android:stateListAnimator="@android:anim/slide_in_left"
        android:text="@string/wifi"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725"
        app:rippleColor="#FB1100"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:targetApi="m" />

    <ImageView
        android:id="@+id/ipLineBg"
        android:layout_width="395dp"
        android:layout_height="234dp"
        android:contentDescription="@string/ip"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:scaleX="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/textbackground" />

    <EditText
        android:id="@+id/ipInputText"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_the_ipv4"
        android:includeFontPadding="true"
        android:inputType="textPersonName"
        android:requiresFadingEdge="horizontal|vertical"
        android:shadowColor="#FF0000"
        android:shadowDy="10"
        android:singleLine="true"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#78DCEC"
        android:textColorHint="#1565C0"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/ipLineBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

</androidx.constraintlayout.widget.ConstraintLayout>